--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,7 @@
-<a href="index.html">
-  <button class="botao">Voltar à Missão WHOMARS</button>
-</a>
-<!DOCTYPE html>
-<html lang="pt-br">
+ <!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Galeria WHOMARS</title>
+  <title>WHOMARS - Página Principal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -13,171 +9,71 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      margin: 0;
-      padding: 20px;
+      padding: 50px;
     }
     h1 {
       color: #00e6b8;
-      margin-bottom: 20px;
-      animation: vibrar 0.4s infinite;
     }
-    @keyframes vibrar {
-      0%, 100% { transform: translateX(0); }
-      25% { transform: translateX(-2px); }
-      75% { transform: translateX(2px); }
-    }
-    .filtros {
-      margin: 20px 0;
-    }
-    .filtros button {
-      background: #00b894;
+    .botao {
+      background-color: #00b894;
       color: white;
-      padding: 10px 15px;
-      border: none;
-      border-radius: 6px;
-      margin: 5px;
-      cursor: pointer;
-    }
-    .filtros button:hover {
-      background: #00e6b8;
-    }
-    .galeria-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-    }
-    .item {
-      width: 200px;
-      background: #1a1a1a;
+      padding: 15px 30px;
+      font-size: 18px;
       border-radius: 10px;
-      box-shadow: 0 0 10px #00e6b8;
-      overflow: hidden;
-      transition: transform 0.3s;
-    }
-    .item:hover {
-      transform: scale(1.03);
-    }
-    .item img {
-      width: 100%;
-      border-bottom: 1px solid #00e6b8;
+      border: none;
       cursor: pointer;
+      margin: 20px;
+      box-shadow: 0 0 10px #00e6b8;
     }
-    .info {
+    .botao:hover {
+      background-color: #00e6b8;
+    }
+    form {
+      background-color: #1a1a1a;
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 500px;
+      margin: 40px auto;
+      box-shadow: 0 0 10px #00e6b8;
+    }
+    input, textarea {
+      width: 100%;
       padding: 10px;
-      font-size: 14px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
     }
-    .info h3 {
-      margin: 5px 0;
-      color: #00e6b8;
-    }
-    .info p {
-      margin: 2px 0;
-    }
-    .btn-voltar {
-      margin-top: 40px;
+    button[type="submit"] {
       background-color: #00b894;
       color: white;
       padding: 12px 25px;
+      font-size: 16px;
       border: none;
       border-radius: 8px;
       cursor: pointer;
+      box-shadow: 0 0 8px #00e6b8;
     }
-    .btn-voltar:hover {
+    button[type="submit"]:hover {
       background-color: #00e6b8;
-    }
-    /* Lightbox */
-    #lightbox {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-    #lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-      border: 4px solid #00e6b8;
-      border-radius: 12px;
     }
   </style>
 </head>
-<body>
+<body>  <h1>Bem-vindo à missão WHOMARS</h1>
+  <p>Explore o espaço da criatividade memeira e compartilhe sua arte.</p>  <a href="galeria.html">
+    <button class="botao">Ver Galeria</button>
+  </a>  <a href="#formulario">
+    <button class="botao">Quero Expor Minha Arte</button>
+  </a>  <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
+    <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
+    <p>Taxa única: <strong>R$ 20,00</strong></p>
+    <p>Chave Pix: <strong>(11) 98376-6776</strong></p><input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
+<input type="text" name="titulo" placeholder="Título da obra" required>
+<textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
+<input type="file" name="imagem" accept="image/*" required>
+<input type="text" name="comprovante" placeholder="ID ou link do comprovante Pix" required>
 
-  <h1>Galeria Interplanetária WHOMARS</h1>
+<button type="submit">Enviar Arte</button>
+<input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
 
-  <div class="filtros">
-    <button onclick="filtrar('todos')">Todos</button>
-    <button onclick="filtrar('brasil')">Brasil</button>
-    <button onclick="filtrar('russia')">Rússia</button>
-    <button onclick="filtrar('japao')">Japão</button>
-  </div>
-
-  <div class="galeria-grid">
-    <div class="item" data-cat="brasil">
-      <img src="https://i.ibb.co/d4v40Qw2/file-000000006d4061f6932296188d8c804a-conversation-id.png" onclick="abrirLightbox(this)">
-      <div class="info">
-        <h3>Foguete Brasil</h3>
-        <p>Artista: Paulo</p>
-        <p>Foguete tropical com coxinha e samba.</p>
-      </div>
-    </div>
-
-    <div class="item" data-cat="russia">
-      <img src="https://i.ibb.co/5w7xsWZ/Screenshot-2025-04-18-06-20-06-752-com-android-chrome.jpg" onclick="abrirLightbox(this)">
-      <div class="info">
-        <h3>Foguete Rússia</h3>
-        <p>Artista: Ivan</p>
-        <p>Tecnologia soviética com estilo retrô.</p>
-      </div>
-    </div>
-
-    <div class="item" data-cat="japao">
-      <img src="https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id.png" onclick="abrirLightbox(this)">
-      <div class="info">
-        <h3>Foguete Japão</h3>
-        <p>Artista: Sakura</p>
-        <p>Robô samurai pilotando o foguete.</p>
-      </div>
-    </div>
-  </div>
-
-  <div id="lightbox" onclick="fecharLightbox()">
-    <img src="" alt="zoom">
-  </div>
-
-  <div>
-    <a href="index.html">
-      <button class="btn-voltar">Voltar à Página Principal</button>
-    </a>
-  </div>
-
-  <script>
-    function filtrar(cat) {
-      const itens = document.querySelectorAll('.item');
-      itens.forEach(item => {
-        if (cat === 'todos' || item.dataset.cat === cat) {
-          item.style.display = 'block';
-        } else {
-          item.style.display = 'none';
-        }
-      });
-    }
-
-    function abrirLightbox(img) {
-      const lightbox = document.getElementById('lightbox');
-      const lightImg = lightbox.querySelector('img');
-      lightImg.src = img.src;
-      lightbox.style.display = 'flex';
-    }
-
-    function fecharLightbox() {
-      document.getElementById('lightbox').style.display = 'none';
-    }
-  </script>
-
-</body>
+  </form></body>
 </html>
