--- a/galeria.html
+++ b/galeria.html
@@ -1,7 +1,7 @@
- <!DOCTYPE html><html lang="pt-BR">
+  <!DOCTYPE html><html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>WHOMARS - Página Principal</title>
+  <title>Galeria WHOMARS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -9,71 +9,174 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 50px;
+      padding: 20px;
+      user-select: none;
     }
     h1 {
       color: #00e6b8;
+      margin-bottom: 20px;
+      animation: vibrar 0.4s infinite;
     }
-    .botao {
-      background-color: #00b894;
+    @keyframes vibrar {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-2px); }
+      75% { transform: translateX(2px); }
+    }
+    .filtros {
+      margin: 20px 0;
+    }
+    .filtros button {
+      background: #00b894;
       color: white;
-      padding: 15px 30px;
-      font-size: 18px;
-      border-radius: 10px;
+      padding: 10px 15px;
       border: none;
+      border-radius: 6px;
+      margin: 5px;
       cursor: pointer;
-      margin: 20px;
-      box-shadow: 0 0 10px #00e6b8;
     }
-    .botao:hover {
-      background-color: #00e6b8;
+    .filtros button:hover {
+      background: #00e6b8;
     }
-    form {
-      background-color: #1a1a1a;
-      padding: 20px;
+    .grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 15px;
+    }
+    .item {
+      background: #1a1a1a;
+      width: 200px;
       border-radius: 10px;
-      max-width: 500px;
-      margin: 40px auto;
       box-shadow: 0 0 10px #00e6b8;
+      overflow: hidden;
+      transition: transform 0.3s;
     }
-    input, textarea {
+    .item:hover {
+      transform: scale(1.03);
+    }
+    .galeria {
       width: 100%;
-      padding: 10px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 5px;
+      border-bottom: 1px solid #00e6b8;
+      cursor: pointer;
     }
-    button[type="submit"] {
+    .info {
+      padding: 10px;
+      font-size: 13px;
+      text-align: left;
+    }
+    .info h3 {
+      margin: 5px 0;
+      color: #00e6b8;
+    }
+    .info p {
+      margin: 3px 0;
+    }
+    .voltar-btn {
       background-color: #00b894;
       color: white;
       padding: 12px 25px;
       font-size: 16px;
-      border: none;
       border-radius: 8px;
+      border: none;
       cursor: pointer;
+      margin-top: 40px;
       box-shadow: 0 0 8px #00e6b8;
     }
-    button[type="submit"]:hover {
+    .voltar-btn:hover {
       background-color: #00e6b8;
+    }
+    #lightbox {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+    #lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+      border: 4px solid #00e6b8;
+      border-radius: 12px;
     }
   </style>
 </head>
-<body>  <h1>Bem-vindo à missão WHOMARS</h1>
-  <p>Explore o espaço da criatividade memeira e compartilhe sua arte.</p>  <a href="galeria.html">
-    <button class="botao">Ver Galeria</button>
-  </a>  <a href="#formulario">
-    <button class="botao">Quero Expor Minha Arte</button>
-  </a>  <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
-    <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
-    <p>Taxa única: <strong>R$ 20,00</strong></p>
-    <p>Chave Pix: <strong>(11) 98376-6776</strong></p><input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
-<input type="text" name="titulo" placeholder="Título da obra" required>
-<textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
-<input type="file" name="imagem" accept="image/*" required>
-<input type="text" name="comprovante" placeholder="ID ou link do comprovante Pix" required>
+<body>
+  <h1>Galeria Interplanetária WHOMARS</h1>  <div class="filtros">
+    <button onclick="filtrar('todos')">Todos</button>
+    <button onclick="filtrar('brasil')">Brasil</button>
+    <button onclick="filtrar('russia')">Rússia</button>
+    <button onclick="filtrar('asia')">Ásia</button>
+  </div>  <div class="grid" id="galeria"></div>  <div id="lightbox" onclick="fecharLightbox()">
+    <img src="" alt="zoom">
+  </div>  <div>
+    <a href="index.html">
+      <button class="voltar-btn">Voltar à Página Principal</button>
+    </a>
+  </div>  <script>
+    const obras = [
+      {
+        categoria: "brasil",
+        titulo: "Foguete da Gambiarra",
+        artista: "Paulo",
+        descricao: "Sobe na força da coxinha e do improviso.",
+        imagem: "https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png"
+      },
+      {
+        categoria: "russia",
+        titulo: "Foguete Soviético",
+        artista: "Ivanov",
+        descricao: "Projetado com vodka e aço reciclado.",
+        imagem: "https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png"
+      },
+      {
+        categoria: "asia",
+        titulo: "Foguete Samurai",
+        artista: "Sakura",
+        descricao: "Pilotado por um robô bushido interplanetário.",
+        imagem: "https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id.png"
+      }
+    ];
 
-<button type="submit">Enviar Arte</button>
-<input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
+    function renderGaleria(lista) {
+      const galeria = document.getElementById("galeria");
+      galeria.innerHTML = "";
+      lista.forEach((obra) => {
+        const item = document.createElement("div");
+        item.className = "item";
+        item.dataset.cat = obra.categoria;
+        item.innerHTML = `
+          <img src="${obra.imagem}" class="galeria" onclick="abrirLightbox(this)">
+          <div class="info">
+            <h3>${obra.titulo}</h3>
+            <p>Artista: ${obra.artista}</p>
+            <p>${obra.descricao}</p>
+          </div>
+        `;
+        galeria.appendChild(item);
+      });
+    }
 
-  </form></body>
+    function filtrar(cat) {
+      const itens = document.querySelectorAll('.item');
+      itens.forEach(item => {
+        item.style.display = (cat === 'todos' || item.dataset.cat === cat) ? 'block' : 'none';
+      });
+    }
+
+    function abrirLightbox(img) {
+      document.querySelector('#lightbox img').src = img.src;
+      document.getElementById('lightbox').style.display = 'flex';
+    }
+
+    function fecharLightbox() {
+      document.getElementById('lightbox').style.display = 'none';
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+      renderGaleria(obras);
+    });
+  </script></body>
 </html>
