--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
- <!DOCTYPE html><html lang="pt-BR">
+ <!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>WHOMARS - Página Principal</title>
+  <title>WHOMARS - Galeria de Artes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -9,10 +10,13 @@
       color: #fff;
       font-family: Arial, sans-serif;
       text-align: center;
-      padding: 50px;
+      padding: 40px 20px;
     }
     h1 {
       color: #00e6b8;
+    }
+    p {
+      margin-bottom: 30px;
     }
     .botao {
       background-color: #00b894;
@@ -22,7 +26,7 @@
       border-radius: 10px;
       border: none;
       cursor: pointer;
-      margin: 20px;
+      margin: 10px;
       box-shadow: 0 0 10px #00e6b8;
     }
     .botao:hover {
@@ -42,6 +46,7 @@
       margin: 10px 0;
       border: none;
       border-radius: 5px;
+      font-size: 14px;
     }
     button[type="submit"] {
       background-color: #00b894;
@@ -58,22 +63,36 @@
     }
   </style>
 </head>
-<body>  <h1>Bem-vindo à missão WHOMARS</h1>
-  <p>Explore o espaço da criatividade memeira e compartilhe sua arte.</p>  <a href="galeria.html">
+<body>
+
+  <h1>Bem-vindo à missão WHOMARS</h1>
+  <p>Explore o espaço da criatividade memeira e compartilhe sua arte na <strong>Galeria de Artes WHOMARS</strong>.</p>
+
+  <a href="galeria.html">
     <button class="botao">Ver Galeria</button>
-  </a>  <a href="#formulario">
+  </a>
+
+  <a href="#formulario">
     <button class="botao">Quero Expor Minha Arte</button>
-  </a>  <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
+  </a>
+
+  <form id="formulario" action="https://formsubmit.co/paulojgoncalves2013@gmail.com" method="POST" enctype="multipart/form-data">
     <h2 style="color:#00e6b8;">Exponha Sua Arte</h2>
     <p>Taxa única: <strong>R$ 20,00</strong></p>
-    <p>Chave Pix: <strong>(11) 98376-6776</strong></p><input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
-<input type="text" name="titulo" placeholder="Título da obra" required>
-<textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
-<input type="file" name="imagem" accept="image/*" required>
-<input type="text" name="comprovante" placeholder="ID ou link do comprovante Pix" required>
+    <p>Chave Pix: <strong>(11) 98376-6776</strong></p>
 
-<button type="submit">Enviar Arte</button>
-<input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
+    <input type="text" name="nome" placeholder="Seu nome ou nome artístico" required>
+    <input type="text" name="titulo" placeholder="Título da obra" required>
+    <textarea name="descricao" placeholder="Breve descrição da arte" rows="4" required></textarea>
+    <input type="file" name="imagem" accept="image/*" required>
+    <input type="text" name="comprovante" placeholder="ID ou link do comprovante Pix" required>
 
-  </form></body>
+    <button type="submit">Enviar Arte</button>
+
+    <!-- Campos ocultos -->
+    <input type="hidden" name="_next" value="https://gpfk.github.io/obrigado.html">
+    <input type="hidden" name="_captcha" value="false">
+  </form>
+
+</body>
 </html>
