--- a/galeria.html
+++ b/galeria.html
@@ -1,182 +1,109 @@
-  <!DOCTYPE html><html lang="pt-BR">
+ <!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Galeria WHOMARS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background-color: #111;
+      background: #000;
       color: #fff;
       font-family: Arial, sans-serif;
-      text-align: center;
+      margin: 0;
       padding: 20px;
-      user-select: none;
     }
     h1 {
-      color: #00e6b8;
-      margin-bottom: 20px;
-      animation: vibrar 0.4s infinite;
+      text-align: center;
+      margin-bottom: 10px;
     }
-    @keyframes vibrar {
-      0%, 100% { transform: translateX(0); }
-      25% { transform: translateX(-2px); }
-      75% { transform: translateX(2px); }
-    }
-    .filtros {
-      margin: 20px 0;
-    }
-    .filtros button {
-      background: #00b894;
-      color: white;
-      padding: 10px 15px;
+    #filtro {
+      display: block;
+      margin: 0 auto 20px auto;
+      padding: 10px;
+      width: 90%;
+      max-width: 400px;
+      border-radius: 5px;
       border: none;
-      border-radius: 6px;
-      margin: 5px;
-      cursor: pointer;
-    }
-    .filtros button:hover {
-      background: #00e6b8;
-    }
-    .grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-    .item {
-      background: #1a1a1a;
-      width: 200px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px #00e6b8;
-      overflow: hidden;
-      transition: transform 0.3s;
-    }
-    .item:hover {
-      transform: scale(1.03);
+      font-size: 16px;
     }
     .galeria {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .item {
+      background: #111;
+      padding: 10px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #00ffbf44;
+    }
+    .item img {
       width: 100%;
-      border-bottom: 1px solid #00e6b8;
-      cursor: pointer;
+      border-radius: 8px;
     }
     .info {
-      padding: 10px;
-      font-size: 13px;
-      text-align: left;
+      margin-top: 10px;
     }
     .info h3 {
-      margin: 5px 0;
-      color: #00e6b8;
+      margin: 0;
+      color: #00ffc8;
     }
     .info p {
-      margin: 3px 0;
-    }
-    .voltar-btn {
-      background-color: #00b894;
-      color: white;
-      padding: 12px 25px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      margin-top: 40px;
-      box-shadow: 0 0 8px #00e6b8;
-    }
-    .voltar-btn:hover {
-      background-color: #00e6b8;
-    }
-    #lightbox {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      display: none;
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-    #lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-      border: 4px solid #00e6b8;
-      border-radius: 12px;
+      margin: 4px 0;
     }
   </style>
 </head>
 <body>
-  <h1>Galeria Interplanetária WHOMARS</h1>  <div class="filtros">
-    <button onclick="filtrar('todos')">Todos</button>
-    <button onclick="filtrar('brasil')">Brasil</button>
-    <button onclick="filtrar('russia')">Rússia</button>
-    <button onclick="filtrar('asia')">Ásia</button>
-  </div>  <div class="grid" id="galeria"></div>  <div id="lightbox" onclick="fecharLightbox()">
-    <img src="" alt="zoom">
-  </div>  <div>
-    <a href="index.html">
-      <button class="voltar-btn">Voltar à Página Principal</button>
-    </a>
-  </div>  <script>
-    const obras = [
-      {
-        categoria: "brasil",
-        titulo: "Foguete da Gambiarra",
-        artista: "Paulo",
-        descricao: "Sobe na força da coxinha e do improviso.",
-        imagem: "https://i.ibb.co/xqyMSPyF/file-0000000012f061f7beaca2d2ec16cd79-conversation-id.png"
-      },
-      {
-        categoria: "russia",
-        titulo: "Foguete Soviético",
-        artista: "Ivanov",
-        descricao: "Projetado com vodka e aço reciclado.",
-        imagem: "https://i.ibb.co/K1NNJyX/file-000000004bd461f7a1e598f5fedad5f5-conversation-id.png"
-      },
-      {
-        categoria: "asia",
-        titulo: "Foguete Samurai",
-        artista: "Sakura",
-        descricao: "Pilotado por um robô bushido interplanetário.",
-        imagem: "https://i.ibb.co/fdjHw1qH/file-00000000e5b46230ba7555231f4efeb6-conversation-id.png"
-      }
-    ];
+  <h1>Galeria WHOMARS</h1>
+  <input type="text" id="filtro" placeholder="Filtrar por artista, título ou descrição..." />
+  <div class="galeria" id="galeria"></div>
 
-    function renderGaleria(lista) {
-      const galeria = document.getElementById("galeria");
-      galeria.innerHTML = "";
-      lista.forEach((obra) => {
-        const item = document.createElement("div");
-        item.className = "item";
-        item.dataset.cat = obra.categoria;
-        item.innerHTML = `
-          <img src="${obra.imagem}" class="galeria" onclick="abrirLightbox(this)">
-          <div class="info">
-            <h3>${obra.titulo}</h3>
-            <p>Artista: ${obra.artista}</p>
-            <p>${obra.descricao}</p>
-          </div>
-        `;
-        galeria.appendChild(item);
+  <script>
+    const sheetId = "1JPuFf8dSiQJYzGCSljcce8QTcA880dhBLqMetyAjqN0";
+    const url = `https://docs.google.com/spreadsheets/d/${sheetId}/gviz/tq?tqx=out:json`;
+
+    fetch(url)
+      .then(res => res.text())
+      .then(data => {
+        const json = JSON.parse(data.substr(47).slice(0, -2));
+        const galeria = document.getElementById("galeria");
+
+        let obras = json.table.rows.map(row => ({
+          artista: row.c[0]?.v || "",
+          titulo: row.c[1]?.v || "",
+          descricao: row.c[2]?.v || "",
+          imagem: row.c[3]?.v || ""
+        }));
+
+        function render(filtro = "") {
+          galeria.innerHTML = "";
+          obras
+            .filter(o => {
+              const termo = filtro.toLowerCase();
+              return o.artista.toLowerCase().includes(termo) ||
+                     o.titulo.toLowerCase().includes(termo) ||
+                     o.descricao.toLowerCase().includes(termo);
+            })
+            .forEach(o => {
+              const div = document.createElement("div");
+              div.className = "item";
+              div.innerHTML = `
+                <img src="${o.imagem}" alt="${o.titulo}" />
+                <div class="info">
+                  <h3>${o.titulo}</h3>
+                  <p><strong>${o.artista}</strong></p>
+                  <p>${o.descricao}</p>
+                </div>`;
+              galeria.appendChild(div);
+            });
+        }
+
+        render();
+
+        document.getElementById("filtro").addEventListener("input", e => {
+          render(e.target.value);
+        });
       });
-    }
-
-    function filtrar(cat) {
-      const itens = document.querySelectorAll('.item');
-      itens.forEach(item => {
-        item.style.display = (cat === 'todos' || item.dataset.cat === cat) ? 'block' : 'none';
-      });
-    }
-
-    function abrirLightbox(img) {
-      document.querySelector('#lightbox img').src = img.src;
-      document.getElementById('lightbox').style.display = 'flex';
-    }
-
-    function fecharLightbox() {
-      document.getElementById('lightbox').style.display = 'none';
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      renderGaleria(obras);
-    });
-  </script></body>
+  </script>
+</body>
 </html>
